--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "support ticket app",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "start": "node backend/server.mjs",
+    "server": "nodemon backend/server.mjs"
   },
   "author": "Alejandro Zamora",
   "license": "MIT",
